Some spacing issues and added solar project in WebGL

--- a/sass/sass/style.scss
+++ b/sass/sass/style.scss
@@ -176,7 +176,6 @@ div{
 	}
 
 	#Work{
-
 		.square-pair {
 			width: 100%;
 		    height: 350px;
@@ -288,7 +287,6 @@ div{
 	#Blog {
 		.fixed-height-blog{
 			margin-top: 2em;
-			margin-bottom: 2em;
 			height: 650px;
 			border: solid;
 			border-right:none;
